# UniCameraWorld

UniCameraWorld/: CMakeLists.txt  Main.qml  UniButton.qml  UniLabel.qml  main.cpp
UniCameraWorld/UniThemeManager/: .qmlls.ini  CMakeLists.txt  DarkTheme.qml  ThemeManager.qml  UniButtonItem.qml  UniThemeManager.cpp  UniThemeManager.h  unibaseinfo.cpp  unibaseinfo.h  unibutton.cpp  unibutton.h  unibuttonitem.cpp  unibuttonitem.h  unicolorgradient.cpp  unicolorgradient.h  unicolorsolid.cpp  unicolorsolid.h  unicolorstate.cpp  unicolorstate.h  unifont.cpp  unifont.h  unistyle.cpp  unistyle.h
UniCameraWorld/UniThemeManager/Theme/dark/: button.json  label.json  sideMenu.json  stahni_video.py  theme.json
UniCameraWorld/UniThemeManager/Theme/light/: button.json  label.json  mainWindow.json  theme.json
UniCameraWorld/UniThemeManager/Theme/modern_dark/: button.json  label.json  mainWindow.json  theme.json
UniCameraWorld/UniThemeManager/Theme/modern_light/: label.json  sideMenu.json  theme.json
UniCameraWorld/UniThemeManager/Theme/unicorn/: button.json  label.json  mainWindow.json  setting.json  sideMenu.json  theme.json
UniCameraWorld/UniThemeManager/old/: UniBaseInfo.h  UniButton.h  UniButtonPart.h  UniColorGradien.h  UniColorSolid.h  UniColorState.h  UniFont.h  UniStyle.h
UniCameraWorld/old/UniThemeManager/: UniThemeManager.cpp
UniCameraWorld/old/UniThemeManager1/: CMakeLists.txt  DarkTheme.qml  UniButtonItem.qml  UniThemeItem.qml
